2010-06-30  Adam Roben  <aroben@apple.com>

        Update Windows test results after r62092

        * platform/win/fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/win/fast/dom/prototype-inheritance-2-expected.txt:
        * platform/win/fast/dom/prototype-inheritance-expected.txt:
        * platform/win/fast/js/global-constructors-expected.txt:

2010-06-30  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Simon Fraser.

        Spatial Navigation: make elements in inner frames nested more than 1 level deep focusable
        https://bugs.webkit.org/show_bug.cgi?id=41160

        * fast/events/spatial-navigation/resources/iframe.html: Added.
        * fast/events/spatial-navigation/snav-iframe-nested-expected.txt: Added.
        * fast/events/spatial-navigation/snav-iframe-nested.html: Added.

2010-06-30  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update Chromium test expectations.

        * platform/chromium-mac/html5lib/runner-expected.txt:
        * platform/chromium-win/html5lib/runner-expected.txt:

2010-06-30  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Just updating test expectations.

        HTMLTokenizer needs EndOfFile support
        https://bugs.webkit.org/show_bug.cgi?id=41344

        Update results after EndOfFile support.
        The final pump will always have one character,
        which is the EOF character.

        * inspector/timeline-parse-html-expected.txt:

2010-06-29  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        HTMLTokenizer needs EndOfFile support
        https://bugs.webkit.org/show_bug.cgi?id=41344

        We now pass an additional 60 subtests for the
        html5lib test suite.  Boo-ya.

        * html5lib/runner-expected.txt:

2010-06-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Teach HTML5TreeBuilder how to merge attributes from extra html/body elements
        https://bugs.webkit.org/show_bug.cgi?id=41337