@@ -1,0 +1,98 @@
+<html>
+<head>
+<script src="../http/tests/inspector/inspector-test.js"></script>
+<script>
+
+var globalVar = { b: 1 };
+
+function slave(x) {
+    var y = 20;
+    debugger;
+}
+
+function testFunction() {
+    var localObject = {a: 300};
+    slave(4000);
+}
+
+function doit()
+{
+    function callback(result)
+    {
+        if (result instanceof Array) {
+            for (var i = 0; i < result.length; i++)
+                output(result[i]);
+        } else
+            output(result);
+        notifyDone();
+    }
+    evaluateInWebInspector("frontend_testPauseOnDebuggerStatement", callback);
+}
+
+function frontend_testPauseOnDebuggerStatement(testController)
+{
+    testController.waitUntilDone();
+
+    WebInspector.showScriptsPanel();
+    frontend_ensureDebuggerEnabled(debuggerWasEnabledCallback);
+
+    function debuggerWasEnabledCallback()
+    {
+        testController.results.push("Debugger was enabled.");
+        frontend_evaluateInConsole("setTimeout(testFunction, 0)", function(result)
+        {
+            testController.results.push("Set timer for test function.");
+        });
+    }
+
+    frontend_addSniffer(WebInspector, "pausedScript", function(callFrames)
+    {
+        testController.results.push("Script execution paused.");
+        frontend_evaluateInConsole("x + y + globalVar.b", function(result)
+        {
+            testController.results.push("Evaluated script on the top frame: " + result);
+            WebInspector.panels.scripts.sidebarPanes.callstack.selectedCallFrame = callFrames[1];
+            testController.runAfterPendingDispatches(testEvalInCallingFrame);
+        });
+
+        function testEvalInCallingFrame()
+        {
+            frontend_evaluateInConsole("localObject.a + globalVar.b", function(result)
+            {
+                testController.results.push("Evaluated script on the calling frame: " + result);
+                completeTest();
+            });
+        }
+    });
+
+    function completeTest()
+    {
+       if (WebInspector.panels.scripts.paused)
+            WebInspector.panels.scripts._togglePause();
+        testController.results.push("Resumed script execution.");
+        testController.notifyDone();
+    }
+}
+
+function frontend_ensureDebuggerEnabled(callback)
+{
+    if (WebInspector.panels.scripts._debuggerEnabled) {
+        callback();
+        return;
+    }
+
+    frontend_addSniffer(WebInspector, "debuggerWasEnabled", callback);
+    WebInspector.panels.scripts._toggleDebugging(false);
+}
+
+</script>
+</head>
+
+<body onload="onload()">
+<p>
+Tests that evaluation in console works fine when script is paused. It also checks that
+stack and global variables are accessible from the console.
+</p>
+
+</body>
+</html>
